packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__rescript_handler_for_tuple_events.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: content
---
/*
 * Please refer to https://docs.envio.dev for a thorough guide on all Envio indexer features
 */

open Indexer

indexer.onEvent({event: SablierLockupTranched(CreateLockupTranchedStream)}, async ({event, context}) => {
  let entity: Entities.SablierLockupTranched_CreateLockupTranchedStream.t = {
    id: `${(event.chainId :> int)->Belt.Int.toString}_${event.block.number->Belt.Int.toString}_${event.logIndex->Belt.Int.toString}`,
    streamId: event.params.streamId,
    funder: event.params.funder
      ->Address.toString,
    sender: event.params.sender
      ->Address.toString,
    recipient: event.params.recipient
      ->Address.toString,
    amounts: JSON.Object(dict{
      "deposit": JSON.String(event.params.amounts["deposit"]->BigInt.toString),
      "brokerFee": JSON.String(event.params.amounts["brokerFee"]->BigInt.toString),
    }),
    asset: event.params.asset
      ->Address.toString,
    cancelable: event.params.cancelable,
    transferable: event.params.transferable,
    tranches: JSON.Array(event.params.tranches->Array.map(item => JSON.Object(dict{
      "amount": JSON.String(item["amount"]->BigInt.toString),
      "timestamp": JSON.String(item["timestamp"]->BigInt.toString),
    }))),
    timestamps: JSON.Object(dict{
      "start": JSON.String(event.params.timestamps["start"]->BigInt.toString),
      "end": JSON.String(event.params.timestamps["end"]->BigInt.toString),
    }),
    broker: event.params.broker
      ->Address.toString,
  }

  context.\"SablierLockupTranched_CreateLockupTranchedStream".set(entity)
})
