packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__rescript_test_file_for_evm.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: content
---
open Vitest
open Indexer

describe("Contract1 contract NewGravatar event tests", () => {
  Async.it("NewGravatar handler creates Contract1_NewGravatar entity", async t => {
    let indexer = createTestIndexer()

    let _ = await indexer.process({
      chains: {
        \"1": {
          simulate: [
            makeSimulateItem(
              OnEvent({
                event: Contract1(NewGravatar),
                params: {
                  id: 0n,
                  owner: Envio.TestHelpers.Addresses.defaultAddress,
                  displayName: "default string value",
                  imageUrl: "default string value",
              },
            }),
          ),
          ],
        },
      },
    })

    let actualContract1NewGravatar = await indexer.\"Contract1_NewGravatar".getOrThrow("1_0_0")

    let expectedContract1NewGravatar: Entities.Contract1_NewGravatar.testIndexerRow = {
      id: "1_0_0",
      event_id: 0n,
      owner: Envio.TestHelpers.Addresses.defaultAddress->Address.toString,
      displayName: "default string value",
      imageUrl: "default string value",
      chainId: 1,
    }

    t.expect(
      actualContract1NewGravatar,
      ~message="Actual Contract1_NewGravatar should be the same as the expected Contract1_NewGravatar",
    ).toEqual(expectedContract1NewGravatar)
  })
})

describe("Indexer smoke test", () => {
  Async.it("processes the first block with events on chain 1", async t => {
    let indexer = createTestIndexer()

    let result = await indexer.process({
      chains: {
        \"1": ({} : TestIndexer.evmChainConfig),
      },
    })

    t.expect(
      result.changes->Array.length,
      ~message="Should have at least one change",
    ).toBeGreaterThan(0)
  }, ~timeout=60_000)
})
