packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__rescript_test_file_for_fuel.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: content
---
open Vitest
open Indexer

describe("Greeter contract NewGreeting event tests", () => {
  Async.it("NewGreeting handler creates Greeter_NewGreeting entity", async _t => {
    let indexer = Indexer.createTestIndexer()

    // TODO: Configure chain ID and start/end blocks for your contract
    let result = await indexer.process({
      chains: {
        \"1": {
          startBlock: 0,
          endBlock: 100,
          simulate: [Greeter.NewGreeting.makeSimulateItem()],
        },
      },
    })

    // Asserting that the handler produced entity changes
    Assert.isTrue(result.changes->Array.length > 0, ~message="Expected at least one change")
  })
})
