packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__rescript_test_file_for_json_bigint_events.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: content
---
open Vitest
open Indexer

describe("WXTZ contract EnforcedOptionSet event tests", () => {
  Async.it("EnforcedOptionSet handler creates WXTZ_EnforcedOptionSet entity", async t => {
    let indexer = createTestIndexer()

    let _ = await indexer.process({
      chains: {
        \"1": {
          simulate: [
            makeSimulateItem(
              OnEvent({
                event: WXTZ(EnforcedOptionSet),
                params: {
                  _enforcedOptions: [],
              },
            }),
          ),
          ],
        },
      },
    })

    let actualWXTZEnforcedOptionSet = await indexer.\"WXTZ_EnforcedOptionSet".getOrThrow("1_0_0")

    let expectedWXTZEnforcedOptionSet: Entities.WXTZ_EnforcedOptionSet.testIndexerRow = {
      id: "1_0_0",
      _enforcedOptions: JSON.Array([]),
      chainId: 1,
    }

    t.expect(
      actualWXTZEnforcedOptionSet,
      ~message="Actual WXTZ_EnforcedOptionSet should be the same as the expected WXTZ_EnforcedOptionSet",
    ).toEqual(expectedWXTZEnforcedOptionSet)
  })
})

describe("Indexer smoke test", () => {
  Async.it("processes the first block with events on chain 1", async t => {
    let indexer = createTestIndexer()

    let result = await indexer.process({
      chains: {
        \"1": ({} : TestIndexer.evmChainConfig),
      },
    })

    t.expect(
      result.changes->Array.length,
      ~message="Should have at least one change",
    ).toBeGreaterThan(0)
  }, ~timeout=60_000)
})
