packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__schema_graphql_for_evm.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: template.render_schema_graphql()
---
type Contract1_NewGravatar {
  id: ID!
  event_id: BigInt!
  owner: String!
  displayName: String!
  imageUrl: String!
}

type Contract1_UpdatedGravatar {
  id: ID!
  event_id: BigInt!
  owner: String!
  displayName: String!
  imageUrl: String!
}
