packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__typescript_handler_for_tuple_events.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: content
---
/*
 * Please refer to https://docs.envio.dev for a thorough guide on all Envio indexer features
 */
import { indexer } from "envio";
import type {
  SablierLockupTranched_CreateLockupTranchedStream,
} from "envio";

indexer.onEvent({ contract: "SablierLockupTranched", event: "CreateLockupTranchedStream" }, async ({ event, context }) => {
  const entity: SablierLockupTranched_CreateLockupTranchedStream = {
    id: `${event.chainId}_${event.block.number}_${event.logIndex}`,
    streamId: event.params.streamId,
    funder: event.params.funder,
    sender: event.params.sender,
    recipient: event.params.recipient,
    amounts: {
      deposit: event.params.amounts.deposit.toString(),
      brokerFee: event.params.amounts.brokerFee.toString(),
    },
    asset: event.params.asset,
    cancelable: event.params.cancelable,
    transferable: event.params.transferable,
    tranches: event.params.tranches.map((item) => ({
      amount: item.amount.toString(),
      timestamp: item.timestamp.toString(),
    })),
    timestamps: {
      start: event.params.timestamps.start.toString(),
      end: event.params.timestamps.end.toString(),
    },
    broker: event.params.broker,
  };

  context.SablierLockupTranched_CreateLockupTranchedStream.set(entity);
});
