packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__typescript_test_file_for_evm.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: content
---
import { describe, it } from "vitest";
import { createTestIndexer, type Contract1_NewGravatar } from "envio";
import { TestHelpers } from "envio";

describe("Contract1 contract NewGravatar event tests", () => {
  it("Contract1_NewGravatar is created correctly", async (t) => {
    const indexer = createTestIndexer();

    // Creating mock for Contract1 contract NewGravatar event
    const event = {
      contract: "Contract1" as const,
      event: "NewGravatar" as const,
      params: {
        id: 0n,
        owner: TestHelpers.Addresses.defaultAddress,
        displayName: "default string value",
        imageUrl: "default string value",
      },
    };

    await indexer.process({
      chains: {
        1: {
          simulate: [event],
        },
      },
    });

    // Getting the actual entity from the test indexer
    let actualContract1NewGravatar = await indexer.Contract1_NewGravatar.getOrThrow("1_0_0");

    // Creating the expected entity
    const expectedContract1NewGravatar = {
      id: "1_0_0",
      event_id: event.params.id,
      owner: event.params.owner,
      displayName: event.params.displayName,
      imageUrl: event.params.imageUrl,
      chainId: 1,
    };
    // Asserting that the entity in the mock database is the same as the expected entity
    t.expect(actualContract1NewGravatar, "Actual Contract1NewGravatar should be the same as the expected Contract1NewGravatar").toEqual(expectedContract1NewGravatar);
  });
});

describe("Indexer smoke test", () => {
  it("processes the first block with events on chain 1", async (t) => {
    const indexer = createTestIndexer();

    const result = await indexer.process({ chains: { 1: {} } });

    t.expect(result.changes.length, "Should have at least one change").toBeGreaterThan(0);
    const firstChange = result.changes[0]!;
    t.expect(firstChange.chainId).toBe(1);
    t.expect(firstChange.eventsProcessed).toBeGreaterThan(0);
  }, 60_000);
});
