packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__contract_import_templates__test__typescript_test_file_for_json_bigint_events.snap
---
source: packages/cli/src/hbs_templating/contract_import_templates.rs
expression: content
---
import { describe, it } from "vitest";
import { createTestIndexer, type WXTZ_EnforcedOptionSet } from "envio";

describe("WXTZ contract EnforcedOptionSet event tests", () => {
  it("WXTZ_EnforcedOptionSet is created correctly", async (t) => {
    const indexer = createTestIndexer();

    // Creating mock for WXTZ contract EnforcedOptionSet event
    const event = {
      contract: "WXTZ" as const,
      event: "EnforcedOptionSet" as const,
      params: {
        _enforcedOptions: [],
      },
    };

    await indexer.process({
      chains: {
        1: {
          simulate: [event],
        },
      },
    });

    // Getting the actual entity from the test indexer
    let actualWXTZEnforcedOptionSet = await indexer.WXTZ_EnforcedOptionSet.getOrThrow("1_0_0");

    // Creating the expected entity
    const expectedWXTZEnforcedOptionSet = {
      id: "1_0_0",
      _enforcedOptions: [],
      chainId: 1,
    };
    // Asserting that the entity in the mock database is the same as the expected entity
    t.expect(actualWXTZEnforcedOptionSet, "Actual WXTZEnforcedOptionSet should be the same as the expected WXTZEnforcedOptionSet").toEqual(expectedWXTZEnforcedOptionSet);
  });
});

describe("Indexer smoke test", () => {
  it("processes the first block with events on chain 1", async (t) => {
    const indexer = createTestIndexer();

    const result = await indexer.process({ chains: { 1: {} } });

    t.expect(result.changes.length, "Should have at least one change").toBeGreaterThan(0);
    const firstChange = result.changes[0]!;
    t.expect(firstChange.chainId).toBe(1);
    t.expect(firstChange.eventsProcessed).toBeGreaterThan(0);
  }, 60_000);
});
